--- a/busqueda_embebidos/busqueda_embebidos.ipynb
+++ b/busqueda_embebidos/busqueda_embebidos.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "# Install required dependencies\n",
-    "!pip install pandas torch sentence-transformers jinja2 tqdm"
+    "!pip install pandas torch sentence-transformers jinja2 tqdm flagembedding"
    ]
   },
   {
