--- a/creador_historias/creador_historias.ipynb
+++ b/creador_historias/creador_historias.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
     "from openai import OpenAI\n",
     "\n",
     "# Configuración del cliente de DeepSeek\n",
-    "client = OpenAI(api_key=\"sk-aa403ef8a7b447d39df2a61893551166\", base_url=\"https://api.deepseek.com\")  # Reemplaza con tu API key\n",
+    "client = OpenAI(api_key=\"sk-xxx\", base_url=\"https://api.deepseek.com\")  # Reemplaza con tu API key\n",
     "\n",
     "# Configuración de logging\n",
     "logging.basicConfig(level=logging.DEBUG, format='%(asctime)s - %(levelname)s - %(message)s')\n",
