--- a/creador_historias/tets_historias.ipynb
+++ b/creador_historias/tets_historias.ipynb
@@ -66,7 +66,7 @@
     "        ),\n",
     "        'user_template': (\n",
     "            \"Recrea esta descripción como una historia MUY BREVE (máximo 4-5 líneas). No agregues título. \"\n",
-    "            \"Menciona fecha/hora si es posible. Narra la desaparición de {nombre_completo} ({edad_momento_desaparicion} años). \"\n",
+    "            \"Menciona fecha/hora si es posible. Narra la desaparición de {nombre_completo} ({edad_momento_desaparicion} años). Deja claro que fue en contra de su voluntad si fuese el caso.\"\n",
     "            \"IMPORTANTE: Elimina por completo cualquier domicilio, número de casa, nombre de calle, nombre de comercio, placa de vehículo o dato sensible similar. \"\n",
     "            \"Anonimiza nombres de terceras personas. El nombre {nombre_completo} y su edad SÍ deben mencionarse (en Sentence case). \"\n",
     "            \"La historia resultante NO debe exceder las 5 líneas de texto. Descripción base: {descripcion_desaparicion}.\"\n",
@@ -79,7 +79,7 @@
     "            \"seco, casi susurrante. Describes la ausencia.\"\n",
     "        ),\n",
     "        'user_template': (\n",
-    "            \"Como un eco en Comala, narra en estilo Rulfiano MUY BREVE (máximo 4-5 líneas) la ausencia de {nombre_completo} \"\n",
+    "            \"Como un eco en Comala, narra en estilo Rulfiano MUY BREVE (máximo 4-5 líneas) la ausencia de {nombre_completo}. Deja claro que fue en contra de su voluntad si fuese el caso.\"\n",
     "            \"({edad_momento_desaparicion} años). Menciona fecha/hora si se intuye. Que quede la sensación del vacío. \"\n",
     "            \"IMPORTANTE: Elimina por completo cualquier domicilio, número de casa, nombre de calle, nombre de comercio, placa de vehículo o dato sensible similar. \"\n",
     "            \"Anonimiza nombres de terceras personas. El nombre {nombre_completo} y su edad SÍ deben mencionarse. \"\n",
@@ -93,7 +93,7 @@
     "            \"momentos específicos y sentimientos.\"\n",
     "        ),\n",
     "        'user_template': (\n",
-    "            \"Crea un haiku en español que capture la esencia del momento de la desaparición de {nombre_completo} \"\n",
+    "            \"Crea un haiku en español que capture la esencia del momento de la desaparición de {nombre_completo}. Deja claro que fue en contra de su voluntad si fuese el caso.\"\n",
     "            \"({edad_momento_desaparicion} años), basándote en la fecha/hora si es posible. \"\n",
     "            \"IMPORTANTE: NO incluyas NINGÚN domicilio, calle, comercio, placa, ni nombres de otras personas. \"\n",
     "            \"El nombre {nombre_completo} puede omitirse si el sentimiento de ausencia es claro. \"\n",
@@ -101,14 +101,14 @@
     "        )\n",
     "    },\n",
     "    {\n",
-    "        'name': 'Narrativa_Poetica',\n",
+    "        'name': 'Estilo werner herzog',\n",
     "        'system': (\n",
-    "            \"Eres un narrador con una voz poética concisa. Usas metáforas sutiles y lenguaje \"\n",
-    "            \"evocador para describir eventos tristes sin melodrama, en pocas líneas.\"\n",
+    "            \"Eres un escritor que emula el estilo conciso y evocador de werner herzog. Usas frases cortas, tono \"\n",
+    "            \"seco, casi susurrante. Describes la ausencia.\"\n",
     "        ),\n",
     "        'user_template': (\n",
-    "            \"Narra poéticamente, en un párrafo MUY CORTO (máximo 4-5 líneas), la desaparición de {nombre_completo} \"\n",
-    "            \"({edad_momento_desaparicion} años). Enfócate en la atmósfera del momento (usa fecha/hora si aplica). \"\n",
+    "            \"Como un eco del viento, narra en estilo de los escritos de werner herzog MUY BREVE (máximo 4-5 líneas) la ausencia de {nombre_completo}. Deja claro que fue en contra de su voluntad si fuese el caso.\"\n",
+    "            \"({edad_momento_desaparicion} años). Menciona fecha/hora si se intuye. Que quede la sensación del vacío. \"\n",
     "            \"IMPORTANTE: Elimina por completo cualquier domicilio, número de casa, nombre de calle, nombre de comercio, placa de vehículo o dato sensible similar. \"\n",
     "            \"Anonimiza nombres de terceras personas. El nombre {nombre_completo} y su edad SÍ deben mencionarse. \"\n",
     "            \"La historia resultante NO debe exceder las 5 líneas de texto. Descripción base: {descripcion_desaparicion}.\"\n",
@@ -120,7 +120,7 @@
     "            \"Eres un cronista que relata hechos de forma muy concisa y objetiva, con un leve toque humano.\"\n",
     "        ),\n",
     "        'user_template': (\n",
-    "            \"Redacta una crónica EXTREMADAMENTE BREVE (2-4 frases, máximo 5 líneas) sobre la desaparición de {nombre_completo} \"\n",
+    "            \"Redacta una crónica EXTREMADAMENTE BREVE (2-4 frases, máximo 5 líneas) sobre la desaparición de {nombre_completo}. Deja claro que fue en contra de su voluntad si fuese el caso.\"\n",
     "            \"({edad_momento_desaparicion} años), incluyendo fecha/hora si se mencionan. Sé objetivo pero humano. \"\n",
     "            \"IMPORTANTE: Omite y elimina por completo cualquier domicilio, número de casa, nombre de calle, nombre de comercio, placa de vehículo o dato sensible similar. \"\n",
     "            \"Anonimiza nombres de terceras personas. El nombre {nombre_completo} y su edad SÍ deben mencionarse. \"\n",
@@ -128,53 +128,54 @@
     "        )\n",
     "    },\n",
     "    {\n",
-    "        'name': 'Voz_Esperanza',\n",
+    "        'name': 'Estilo_Pizarnik',\n",
     "        'system': (\n",
-    "            \"Eres una voz concisa que, incluso al narrar una desaparición, deja una mínima puerta abierta a la esperanza, \"\n",
-    "            \"enfocándose en la persona y el recuerdo vivo.\"\n",
+    "            \"Eres un escritor que emula el estilo conciso y evocador de Alejandra Pizarnik. Usas frases cortas, tono \"\n",
+    "            \"seco, casi susurrante. Describes la ausencia.\"\n",
     "        ),\n",
     "        'user_template': (\n",
-    "            \"Cuenta brevemente (máximo 4-5 líneas) la historia de la desaparición de {nombre_completo} ({edad_momento_desaparicion} años), \"\n",
-    "            \"mencionando fecha/hora si es posible. Narra la ausencia, pero enfócate en quién era {nombre_completo} o en la búsqueda. \"\n",
+    "            \"Como un eco del viento, narra en estilo de Alejandra Pizarnik MUY BREVE (máximo 4-5 líneas) la ausencia de {nombre_completo}. Deja claro que fue en contra de su voluntad si fuese el caso.\"\n",
+    "            \"({edad_momento_desaparicion} años). Menciona fecha/hora si se intuye. Que quede la sensación del vacío. \"\n",
     "            \"IMPORTANTE: Elimina por completo cualquier domicilio, número de casa, nombre de calle, nombre de comercio, placa de vehículo o dato sensible similar. \"\n",
     "            \"Anonimiza nombres de terceras personas. El nombre {nombre_completo} y su edad SÍ deben mencionarse. \"\n",
-    "            \"La historia resultante NO debe exceder las 5 líneas de texto. Descripción: {descripcion_desaparicion}.\"\n",
+    "            \"La historia resultante NO debe exceder las 5 líneas de texto. Descripción base: {descripcion_desaparicion}.\"\n",
     "        )\n",
     "    },\n",
     "    {\n",
-    "        'name': 'Estilo_Noticia_Antigua',\n",
+    "        'name': 'Estilo_GarciaMarquez',\n",
     "        'system': (\n",
-    "             \"Eres un redactor de noticias de un periódico antiguo. Usas lenguaje formal, directo y muy conciso.\"\n",
+    "            \"Eres un escritor que emula el estilo conciso y evocador de Gabriel García Márquez. Usas frases cortas, tono \"\n",
+    "            \"seco, casi susurrante. Describes la ausencia.\"\n",
     "        ),\n",
     "        'user_template': (\n",
-    "            \"Redacta como una MUY BREVE nota de periódico antiguo (máximo 4-5 líneas) la noticia de la desaparición de {nombre_completo}, \"\n",
-    "            \"de {edad_momento_desaparicion} años. Incluye fecha y hora si se conocen. Sé factual y conciso. \"\n",
-    "            \"IMPORTANTE: Omite y elimina por completo cualquier domicilio, número de casa, nombre de calle, nombre de comercio, placa de vehículo o dato sensible similar. \"\n",
+    "            \"Como un eco del viento, narra en estilo de Gabriel García Márquez MUY BREVE (máximo 4-5 líneas) la ausencia de {nombre_completo}. Deja claro que fue en contra de su voluntad si fuese el caso.\"\n",
+    "            \"({edad_momento_desaparicion} años). Menciona fecha/hora si se intuye. Que quede la sensación del vacío. \"\n",
+    "            \"IMPORTANTE: Elimina por completo cualquier domicilio, número de casa, nombre de calle, nombre de comercio, placa de vehículo o dato sensible similar. \"\n",
     "            \"Anonimiza nombres de terceras personas. El nombre {nombre_completo} y su edad SÍ deben mencionarse. \"\n",
-    "            \"La historia resultante NO debe exceder las 5 líneas de texto. Basado en: {descripcion_desaparicion}.\"\n",
-    "         )\n",
+    "            \"La historia resultante NO debe exceder las 5 líneas de texto. Descripción base: {descripcion_desaparicion}.\"\n",
+    "        )\n",
     "    },\n",
     "    {\n",
-    "        'name': 'Microcuento_Fantastico',\n",
+    "        'name': 'Estilo_isabel_allende',\n",
     "        'system': (\n",
-    "             \"Eres un escritor de microcuentos con un toque fantástico o surrealista. Insinúas más de lo que cuentas, de forma muy breve.\"\n",
+    "            \"Eres un escritor que emula el estilo conciso y evocador de Isabel Allende. Usas frases cortas, tono \"\n",
+    "            \"seco, casi susurrante. Describes la ausencia.\"\n",
     "        ),\n",
     "        'user_template': (\n",
-    "            \"Convierte la desaparición de {nombre_completo} ({edad_momento_desaparicion} años) en un microcuento \"\n",
-    "            \"(máximo 4-5 líneas) con un elemento sutilmente fantástico o inexplicable. Menciona fecha/hora como parte del misterio si es posible. \"\n",
-    "            \"Sé EXTREMADAMENTE breve. \"\n",
-    "            \"IMPORTANTE: No incluyas NINGÚN domicilio, calle, comercio, placa ni nombres de otras personas. Evita datos reales identificables. \"\n",
-    "            \"El protagonista {nombre_completo} y su edad SÍ deben mencionarse (o insinuarse). \"\n",
-    "            \"La historia resultante NO debe exceder las 5 líneas de texto. Descripción original (solo como inspiración): {descripcion_desaparicion}.\"\n",
-    "         )\n",
-    "    }\n",
+    "            \"Como un eco del viento, narra en estilo de Isabel Allende MUY BREVE (máximo 4-5 líneas) la ausencia de {nombre_completo}. Deja claro que fue en contra de su voluntad si fuese el caso.\"\n",
+    "            \"({edad_momento_desaparicion} años). Menciona fecha/hora si se intuye. Que quede la sensación del vacío. \"\n",
+    "            \"IMPORTANTE: Elimina por completo cualquier domicilio, número de casa, nombre de calle, nombre de comercio, placa de vehículo o dato sensible similar. \"\n",
+    "            \"Anonimiza nombres de terceras personas. El nombre {nombre_completo} y su edad SÍ deben mencionarse. \"\n",
+    "            \"La historia resultante NO debe exceder las 5 líneas de texto. Descripción base: {descripcion_desaparicion}.\"\n",
+    "        )\n",
+    "    },\n",
     "]\n",
     "\n",
     "\n",
     "# Configuración del cliente de DeepSeek (¡Usa tu API Key real!)\n",
     "try:\n",
     "    # Poner tu API Key real aquí\n",
-    "    client = OpenAI(api_key=\"sk-xxx\", base_url=\"https://api.deepseek.com\")\n",
+    "    client = OpenAI(api_key=\"sk-aa403ef8a7b447d39df2a61893551166\", base_url=\"https://api.deepseek.com\")\n",
     "except Exception as e:\n",
     "    logging.error(f\"Error al inicializar el cliente de DeepSeek: {e}\")\n",
     "    client = None\n",
