--- a/creador_historias/tets_historias.ipynb
+++ b/creador_historias/tets_historias.ipynb
@@ -175,7 +175,7 @@
     "# Configuración del cliente de DeepSeek (¡Usa tu API Key real!)\n",
     "try:\n",
     "    # Poner tu API Key real aquí\n",
-    "    client = OpenAI(api_key=\"sk-aa403ef8a7b447d39df2a61893551166\", base_url=\"https://api.deepseek.com\")\n",
+    "    client = OpenAI(api_key=\"sk-xxx\", base_url=\"https://api.deepseek.com\")\n",
     "except Exception as e:\n",
     "    logging.error(f\"Error al inicializar el cliente de DeepSeek: {e}\")\n",
     "    client = None\n",
